--- a/Assets/Scripts/Factory/StaticEnemyFactory.asmdef
+++ b/Assets/Scripts/Factory/StaticEnemyFactory.asmdef
@@ -1,11 +1,11 @@
 {
-    "name": "Test",
+    "name": "StaticEnemyFactory",
     "rootNamespace": "",
     "references": [
-        "GUID:ad6fb1597e17cca4d9c9ec9b0e3dcbf9",
+        "GUID:852cd9d05f08f964c9cbaf43b7390074",
         "GUID:c103ce5946ecdde47a280bbc09c7c75d",
-        "GUID:5ff517dcf1b58cb4491a0a2215b469a2",
-        "GUID:6d8101a447902444f94ea674219ae73a"
+        "GUID:6d8101a447902444f94ea674219ae73a",
+        "GUID:ad6fb1597e17cca4d9c9ec9b0e3dcbf9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
